News
====

2.3.1 (unreleased)
------------------

- ZON-3199: Move intrafind specific ``Whitelist`` and ``Tag`` to this package.


2.3.0 (2016-09-07)
------------------

- Place ZCML under feature toggle "not zeit.retresco.tms".


2.2.6 (2016-06-06)
------------------

- Move tags-to-xml and trisolute code to zeit.cms (ZON-3114).


2.2.5 (2016-01-20)
------------------

- Replace gocept.cache.method with dogpile.cache (ZON-2576).


2.2.4 (2015-10-29)
------------------

- Catch HTTP/timeout errors of trisolute requests.


2.2.3 (2015-07-01)
------------------

- Ignore <tag> nodes without uuid attribute (apparently this can happen in
  zeit.web meta-files, sigh).


2.2.2 (2014-11-14)
------------------

- Sort Google news topics alphabetically (VIV-555).


2.2.1 (2014-06-05)
------------------

- Use gocept.httpserverlayer.custom to avoid port collisions in tests.


2.2.0 (2014-04-22)
------------------

- Retrieve current Google news topics from Trisolute (VIV-359).


2.1.3 (2014-01-07)
------------------

- Pass through ``url_value`` of tags.


2.1.2 (2013-09-24)
------------------

- Remove unittest2, we have 2.7 now


2.1.1 (2013-07-09)
------------------

- Fix bug that duplicated pinned tags on update.


2.1.0 (2013-07-01)
------------------

- Allow adding new tags for a content object. This supports the new feature for
  articles to add tags from the whitelist via autocomplete (#11421).
- Store "pinned" tags in a separate DAV-Property (#12521).


2.0.1 (2013-05-21)
------------------

- Update tags on modified event for ICMSContent only (#12394).


2.0 (2013-04-23)
----------------

- first release