@@ -1,4 +1,5 @@
 from zeit.cms.application import CONFIG_CACHE
+import collections
 import gocept.lxml.objectify
 import logging
 import urllib2
@@ -39,7 +40,7 @@ class Whitelist(object):
 
     @CONFIG_CACHE.cache_on_arguments()
     def _load(self):
-        tags = {}
+        tags = collections.OrderedDict()
         tags_xml = gocept.lxml.objectify.fromfile(self._fetch())
         for tag_node in tags_xml.xpath('//tag'):
             tag = zeit.intrafind.tag.Tag(
@@ -49,3 +50,20 @@ class Whitelist(object):
             tags[tag.code] = tag
         log.info('Keywords loaded.')
         return tags
+
+
+class Topicpages(object):
+
+    zope.interface.implements(zeit.cms.tagging.interfaces.ITopicpages)
+
+    def get_topics(self, start=0, rows=25):
+        whitelist = zope.component.getUtility(
+            zeit.cms.tagging.interfaces.IWhitelist)
+        result = zeit.cms.tagging.interfaces.Result()
+        result.hits = len(whitelist.data)
+        for tag in whitelist.data.values()[start:start + rows]:
+            result.append({
+                'id': tag.url_value,
+                'title': tag.label,
+            })
+        return result
